@@ -11,6 +11,8 @@ require 'fileutils'
 # are cases where plugins can be given a helping hand in the testing arena. This module 
 # contains some methods to assist when testing plugins that contain fixtures.
 # 
+# == Fixtures and plugins
+#
 # Since Rails' own fixtures method is fairly strict about where files can be loaded from,
 # the simplest approach when running plugin tests with fixtures is to simply copy all
 # fixtures into a single temporary location and inform the standard Rails mechanism to
@@ -23,6 +25,33 @@ require 'fileutils'
 #
 # If you wish to take advantage of this, add a call to the Engines::Testing.set_fixture_path
 # method somewhere before your tests (in a test_helper file, or above the TestCase itself).
+#
+# = Testing plugins
+#
+# Normally testing a plugin will require that Rails is loaded, unless you are including
+# a skeleton Rails environment or set of mocks within your plugin tests. If you require
+# the Rails environment to be started, you must ensure that this actually happens; while
+# it's not obvious, your tests do not automatically run with Rails loaded.
+#
+# The simplest way to setup plugin tests is to include a test helper with the following
+# contents:
+#
+#   # Load the normal Rails helper. This ensures the environment is loaded
+#   require File.expand_path(File.dirname(__FILE__) + '/../../../../test/test_helper')
+#   # Ensure that we are using the temporary fixture path
+#   Engines::Testing.set_fixture_path
+#
+# Then run tests using the provided tasks (<tt>test:plugins</tt>, or the tasks that the engines
+# plugin provides - <tt>test:plugins:units</tt>, etc.).
+#
+# Alternatively, you can explicitly load the environment by adpating the contents of the
+# default <tt>test_helper</tt>:
+#
+#   ENV["RAILS_ENV"] = "test"
+#   # Note that we are requiring config/environment from the root of the enclosing application.
+#   require File.expand_path(File.dirname(__FILE__) + "/../../../../config/environment")
+#   require 'test_help'
+#
 module Engines::Testing
   mattr_accessor :temporary_fixtures_directory
   self.temporary_fixtures_directory = FileUtils.mkdir_p(File.join(Dir.tmpdir, "rails_fixtures"))
